WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276512
Establishing the connection to webinspectord can sometimes fail
https://bugs.webkit.org/show_bug.cgi?id=276512
Summary
Establishing the connection to webinspectord can sometimes fail
Per Arne Vollan
Reported
2024-07-11 16:09:51 PDT
Establishing the connection to webinspectord from the WebContent process can sometimes fail.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2024-07-11 16:11:32 PDT
<
rdar://problem/130712941
>
Per Arne Vollan
Comment 2
2024-07-11 16:15:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30723
EWS
Comment 3
2024-07-12 10:50:45 PDT
Committed
280912@main
(961481a24076): <
https://commits.webkit.org/280912@main
> Reviewed commits have been landed. Closing PR #30723 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug