Establishing the connection to webinspectord can sometimes fail https://bugs.webkit.org/show_bug.cgi?id=276512 rdar://130712941

Reviewed by Chris Dumez.

There is currently a race condition when establishing the XPC connection from the WebContent process to
webinspectord. If the XPC connection is being established after we block access to launchd, establishing
the connection will not succeed. Launchd is being blocked before first page load. This patch addresses
this by establishing the XPC connection before this point in time.

* Source/JavaScriptCore/inspector/remote/RemoteInspector.h:
* Source/JavaScriptCore/inspector/remote/cocoa/RemoteInspectorCocoa.mm:
(Inspector::RemoteInspector::connectToWebInspector):
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/280912@main